--- a/style.css
+++ b/style.css
@@ -326,7 +326,7 @@
 
 html, body {
   height: 100%;
-  background-color: #333844;
+  background-color: #ffffff;
   padding: 0;
   z-index: 1;
   transform: translate3d(0, 0, 0.1px);
@@ -334,7 +334,7 @@ html, body {
 
 body {
   color: white;
-  background-color: #333844;
+  background-color: #ffffff;
   font-family: "Heebo", sans-serif;
   text-align: center;
 }
